# trash-rs

./: .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  Readme.md  azure-pipelines.yml  build.rs  rustfmt.toml
.github/workflows/: rust.yml
examples/: delete.rs  delete_method.rs  hello.rs  list.rs  metadata.rs  trash.rs
src/: freedesktop.rs  lib.rs  linux.rs  macos.rs  tests.rs  uri_path.rs  windows-old.rs  windows.rs
src/macos/: macos.rs  mod.rs  test_macos.rs  tests.rs
src/uri_path/: utility.rs
tests/: freedesktop_tests.rs  integration_tests.rs  isolated.rs  osakit.rs  trash.rs
