[package]
name = "trash"
version = "5.2.2"
authors = ["Artur Kovacs <kovacs.artur.barnabas@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A library for moving files and folders to the Recycle Bin"
keywords = ["remove", "trash", "rubbish", "recycle", "bin"]
repository = "https://github.com/ArturKovacs/trash"
edition = "2021"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md", "build.rs"]

[features]
default = ["coinit_apartmentthreaded", "chrono"]
coinit_apartmentthreaded = []
coinit_multithreaded = []
coinit_disable_ole1dde = []
coinit_speed_over_memory = []

[dependencies]
log = "0.4"

[dev-dependencies]
serial_test = { version = "2.0.0", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
rand = "0.8.5"
once_cell = "1.18.0"
env_logger = "0.10.0"
tempfile = "3.8.0"
defer = "0.2.1"


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.1"
objc2-foundation = { version = "0.2.0", default-features = false, features = [
    "std",
    "NSError",
    "NSFileManager",
    "NSString",
    "NSURL",
] }
percent-encoding = "2.3.1"

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
chrono = { version = "0.4.31", optional = true, default-features = false, features = [
    "clock",
] }
libc = "0.2.149"
scopeguard = "1.2.0"
urlencoding = "2.1.3"
once_cell = "1.18.0"

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
once_cell = "1.7.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_UI_Shell_PropertiesSystem",
] }
scopeguard = "1.2.0"

# workaround for https://github.com/cross-rs/cross/issues/1345
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "mkdir -p /tmp/netbsd",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.2/amd64/binary/sets/base.tar.xz -O",
    "tar -C /tmp/netbsd -xJf base.tar.xz",
    "cp /tmp/netbsd/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf /tmp/netbsd",
]
